--- a/index.adoc
+++ b/index.adoc
@@ -28,9 +28,9 @@ Some events dont follow the request/response pattern. Those events just contain 
 
 
 === user.create.request
-[source,json]
+[source,json+javascript]
 {
-   "name": "my name" // min. 3 characters; max. 64 characters;
+   "name": "my name", // min. 3 characters; max. 64 characters;
    "password": "secret" // min. 8 characters;
 }
 
@@ -43,7 +43,7 @@ Some events dont follow the request/response pattern. Those events just contain 
 === user.created
 [source,json]
 {
-    "id": "7686d130-2223-4769-ab9f-5cebcf795e80"
+    "id": "7686d130-2223-4769-ab9f-5cebcf795e80",
     "name": "my name"
 }
 
