added readme. addd asciidoc build. improved docs structure

--- a/src/main/adoc/events/_group.adoc
+++ b/src/main/adoc/events/_group.adoc
@@ -1,90 +1,4 @@
-= Scrum Poker Websocket API
-:toc: left
-
-== Quick Start
-
-[source,html]
-<script src="http://host:port/socket.io/socket.io.js"></script>
-<script>
-    var socket = io();
-    socket.on("user.create.response", function(response) {
-        if (response.status == 201) {
-            console.log("user created", response.message);
-        } else {
-            console.log("error", response.message);
-        }
-    });
-    socket.emit("user.create.request", {
-        "name": "my name",
-        "password": "secret"
-    });
-</script>
-
-== Events
-
-Events emitted by the user always follow a request/response pattern. For every request event theres is a matching response event indicating a successful or failed action. Response events are only available for the user who sent the request event. The `status` key in the response event indicates the result of a response using HTTP status codes. The `message` key in the response contains the response message if there is any. *The `status` and `message` keys in the response events are omitted in the following list.*
-
-Some events dont follow the request/response pattern. Those events just contain the data. They dont have `status` and `message` key
-
-
-=== user.create.request
-[source]
-{
-   "name": "my name", // min. 3 characters; max. 64 characters;
-   "password": "secret" // min. 8 characters;
-}
-
-=== user.create.response
-[source]
-{
-    "id": "7686d130-2223-4769-ab9f-5cebcf795e80"
-}
-
-=== user.created
-[source]
-{
-    "id": "7686d130-2223-4769-ab9f-5cebcf795e80",
-    "name": "my name"
-}
-
-=== user.list.request
-[source]
-{
-}
-
-=== user.list.response
-[source]
-[
-    {
-        "id": "7686d130-2223-4769-ab9f-5cebcf795e80",
-        "name": "my name"
-    },
-    ...
-]
-
-=== user.join.request
-[source]
-{
-    "id": "7686d130-2223-4769-ab9f-5cebcf795e80",
-    "password": "secret"
-}
-
-=== user.join.response
-
-=== user.joined
-[source]
-{
-    "id": "7686d130-2223-4769-ab9f-5cebcf795e80"
-}
-
-=== user.leave.request
-=== user.leave.response
-
-=== user.left
-[source]
-{
-    "id": "7686d130-2223-4769-ab9f-5cebcf795e80"
-}
+== Group
 
 === group.create.request
 [source]
@@ -100,6 +14,7 @@ Some events dont follow the request/response pattern. Those events just contain 
 }
 
 === group.created
+Recipients: all joined users
 [source]
 {
     "id": "7686d130-2223-4769-ab9f-5cebcf795e80"
@@ -130,6 +45,7 @@ Creator of a group can invite other users
 === group.invite.response
 
 === group.invited
+Recipients: invited user
 [source]
 {
     "id": "7686d130-2223-4769-ab9f-5cebcf795e80"
@@ -158,6 +74,7 @@ Requests all invites for groups that you have created and invites for groups you
 === group.join.response
 
 === group.joined
+Recipients: users in group
 [source]
 {
     "id": "7686d130-2223-4769-ab9f-5cebcf795e80"
@@ -174,6 +91,7 @@ Requests all invites for groups that you have created and invites for groups you
 === group.join.decline.response
 
 === group.join.declined
+Recipients: group owner
 [source]
 {
     "id": "7686d130-2223-4769-ab9f-5cebcf795e80"
@@ -188,6 +106,13 @@ Requests all invites for groups that you have created and invites for groups you
 
 === group.poker.start.response
 
+=== group.poker.started
+Recipients: users in group
+[source]
+{
+    "id": "7686d130-2223-4769-ab9f-5cebcf795e80"
+}
+
 === group.poker.bet.request
 [source]
 {
@@ -198,6 +123,7 @@ Requests all invites for groups that you have created and invites for groups you
 === group.poker.bet.response
 
 === group.poker.betted
+Recipients: users in group
 [source]
 {
     "id": "7686d130-2223-4769-ab9f-5cebcf795e80",
@@ -221,6 +147,7 @@ Requests all invites for groups that you have created and invites for groups you
 ]
 
 === group.poker.ended
+Recipients: users in group
 [source]
 [
     {
@@ -230,7 +157,3 @@ Requests all invites for groups that you have created and invites for groups you
     },
     ...
 ]
-
-== Examples
-
-...
