--- a/src/main/adoc/events/_user.adoc
+++ b/src/main/adoc/events/_user.adoc
@@ -1,4 +1,5 @@
 == User
+`id` in request/reponse events are user ids
 
 === user.create.request
 [source]
@@ -61,3 +62,14 @@ Recipients: all joined users
 {
     "id": "7686d130-2223-4769-ab9f-5cebcf795e80"
 }
+
+=== user.groups.request
+Request for all group ids you are in
+
+=== user.groups.response
+List all group ids you are in
+[source]
+[
+    "7686d130-2223-4769-ab9f-5cebcf795e80",
+    ...
+]
