--- a/src/main/adoc/index.adoc
+++ b/src/main/adoc/index.adoc
@@ -8,25 +8,23 @@
 <script src="http://host:port/socket.io/socket.io.js"></script>
 <script>
     var socket = io();
-    socket.on("user.create.response", function(response) {
-        if (response.status == 201) {
+    socket.emit("user.create.request", {
+        "name": "my name",
+        "password": "secret"
+    }, function(response) {
+        if (response.status == 200) {
             console.log("user created", response.message);
         } else {
             console.log("error", response.message);
         }
     });
-    socket.emit("user.create.request", {
-        "name": "my name",
-        "password": "secret"
-    });
 </script>
 
 == Events
 
-Events emitted by the user always follow a request/response pattern. For every request event theres is a matching response event indicating a successful or failed action. Response events are only available for the user who sent the request event. The `status` key in the response event indicates the result of a response using HTTP status codes. The `message` key in the response contains the response message if there is any. *The `status` and `message` keys in the response events are omitted in the following list.*
+Events emitted by the user always have a callback reponse. The response always contain a `status` key and indicates the result of the response using HTTP status codes. The `message` key in the response contains the response message if there is any.
 
-Some events dont follow the request/response pattern. Those events just contain the data. They dont have `status` and `message` key
-
+Some events dont follow the request/response pattern. Those events just contain the data. They dont have the `status` and `message` key
 
 
 include::events/_user.adoc[leveloffset=+1]
